# Magician_ROS

./: .gitignore  README-CN.md  README.md
src/dobot_interfaces/: CMakeLists.txt  package.xml
src/dobot_interfaces/msg/: PoseMessage.msg
src/dobot_interfaces/srv/: GetDeviceName.srv  GetDeviceSN.srv  GetInfraredSensor.srv  GetQueuedCmdCurrentIndex.srv  GetQueuedCmdMotionFinish.srv  SetColorSensor.srv  SetDeviceName.srv
src/ros2_dobot/: CMakeLists.txt  package.xml
src/ros2_dobot/src/: DobotClient_JOG.cpp  DobotClient_PTP.cpp  DobotServer.cpp
src/ros2_dobot/srv/: GetCPCmd.srv  SetInfraredSensor.srv
